--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,10 +1,317 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+	<meta charset="utf-8">
+	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<title>AirLine Dashboard</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+	<link href="/css/dashboard.css" media="all" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script src="/JQuery/LocationAPI.js" type="text/javascript"></script>
+
 </head>
 <body>
-$END$
+<ul class="nav nav-tabs mb-3" id="myTab0" role="tablist">
+	<li class="nav-item" role="presentation">
+		<button
+				aria-controls="home"
+				aria-selected="true"
+				class="nav-link active"
+				data-mdb-target="#home0"
+				data-mdb-toggle="tab"
+				id="home-tab0"
+				role="tab"
+				type="button"
+		>
+			Statistics and Reports
+		</button>
+	</li>
+	<li class="nav-item" role="presentation">
+		<button
+				aria-controls="profile"
+				aria-selected="false"
+				class="nav-link"
+				data-mdb-target="#profile0"
+				data-mdb-toggle="tab"
+				id="profile-tab0"
+				role="tab"
+				type="button"
+		>
+			Flights
+		</button>
+	</li>
+	<li class="nav-item" role="presentation">
+		<button
+				aria-controls="Bookings"
+				aria-selected="false"
+				class="nav-link"
+				data-mdb-target="#booking0"
+				data-mdb-toggle="tab"
+				id="Bookings-tab0"
+				role="tab"
+				type="button"
+		>
+			Bookings
+		</button>
+	</li>
+</ul>
+<div class="tab-content" id="myTabContent0">
+	<div
+			aria-labelledby="home-tab0"
+			class="tab-pane fade show active"
+			id="home0"
+			role="tabpanel"
+	>
+		<h2>Generate Coupons</h2>
+		<div class="container mt-5">
+			<form th:object="${coupon}" th:action="@{/seller/generate-coupon}" method="post">
+				<div class="form-group">
+					<label for="couponCode">Coupon Code:</label>
+					<input type="text" id="couponCode" th:field="*{couponCode}" class="form-control" placeholder="Enter coupon code">
+				</div>
+				<div class="form-group">
+					<label for="discountPercentage">Discount Percentage:</label>
+					<input type="number" id="discountPercentage" th:field="*{discountPercentage}" class="form-control" placeholder="Enter discount percentage">
+				</div>
+				<button type="submit" class="btn btn-primary">Generate Coupon</button>
+			</form>
+		</div>
+	</div>
+
+	<div aria-labelledby="profile-tab0" class="tab-pane fade" id="profile0" role="tabpanel">
+		<div class="container">
+
+			<form method="post" th:action="@{/airline/save}">
+				<div class="container mt-5">
+					<h2 class="mb-4">Flight Details Form</h2>
+					<!-- Airline Name -->
+					<div class="form-group mb-3">
+						<label for="airlineName">Airline Name</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-plane"></i>
+        </span>
+							<input class="form-control" id="airlineName" name="airlineName"
+							       placeholder="Enter airline name"
+							       type="text">
+						</div>
+					</div>
+					<!-- Flight Number -->
+					<div class="form-group mb-3">
+						<label for="flightNumber">Flight Number</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-ticket-alt"></i>
+        </span>
+							<input class="form-control" id="flightNumber" name="flightNumber"
+							       placeholder="Enter flight number"
+							       type="text">
+
+						</div>
+					</div>
+					<!-- Flight From -->
+					<div class="form-group mb-3">
+						<label for="airport_From">Flight From</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-map-marker-alt"></i>
+        </span>
+							<input class="form-control" id="airport_from" name="airport_from"
+							       placeholder="Enter departure city"
+							       type="text">
+
+						</div>
+						<div  id="airport-from"></div >
+					</div>
+					<!-- Flight To -->
+					<div class="form-group mb-3">
+						<label for="airport_to">Flight To</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-map-marker-alt"></i>
+        </span>
+							<input class="form-control" id="airport_to" name="airport_to"
+							       placeholder="Enter arrival city"
+							       type="text">
+
+						</div>
+						<div  id="airport-to"></div >
+
+					</div>
+					<!-- Departure Airport Code -->
+					<div class="form-group mb-3">
+						<label for="departureAirportCode">Departure Airport Code</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-plane-departure"></i>
+        </span>
+							<input class="form-control" id="departureAirportCode" name="departureAirportCode"
+							       placeholder="Enter departure airport code" type="text">
+						</div>
+					</div>
+					<!-- Arrival Airport Code -->
+					<div class="form-group mb-3">
+						<label for="arrivalAirportCode">Arrival Airport Code</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-plane-arrival"></i>
+        </span>
+							<input class="form-control" id="arrivalAirportCode" name="arrivalAirportCode"
+							       placeholder="Enter arrival airport code"
+							       type="text">
+						</div>
+					</div>
+					<div class="form-group mb-3">
+
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-plane-arrival"></i>
+        </span>
+							<label for="arrivalAirportCode">Terminal Number </label>
+							<select class="form-control" id="Terminal_Number" name="Terminal"
+							        placeholder="Enter arrival airport code">
+								<option value="T1">T1</option>
+								<option value="T2">T2</option>
+								<option value="T3">T3</option>
+								<option value="T4">T4</option>
+								<option value="T5">T5</option>
+							</select>
+						</div>
+					</div>
+					<!-- Departure Date and Time -->
+					<div class="form-group mb-3">
+						<label for="departureDateTime">Departure Date and Time</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-calendar-alt"></i>
+        </span>
+							<input class="form-control" id="departureDateTime" name="departureDateTime"
+							       type="datetime-local">
+						</div>
+					</div>
+					<!-- Arrival Date and Time -->
+					<div class="form-group mb-3">
+						<label for="arrivalDateTime">Arrival Date and Time</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-calendar-alt"></i>
+        </span>
+							<input class="form-control" id="arrivalDateTime" name="arrivalDateTime"
+							       type="datetime-local">
+						</div>
+					</div>
+					<!-- Available Seats -->
+					<div class="form-group mb-3">
+						<label for="availableSeats">Available Seats</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-chair"></i>
+        </span>
+							<input class="form-control" id="availableSeats" name="availableSeats"
+							       placeholder="Enter available seats"
+							       type="number">
+						</div>
+					</div>
+					<!-- Travel Class -->
+					<div class="mb-3">
+						<label class="form-label">Available</label>
+						<div class="input-group">
+                       <span class="input-group-text">
+                    <i class="fas fa-check-circle text-success"></i>
+        </span>
+							<input class="form-control" type="text" value="Yes">
+						</div>
+					</div>
+					<div class="mb-3">
+						<label class="form-label">Baggage Allowance</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-suitcase-rolling text-info"></i>
+        </span>
+							<input class="form-control" name="Baggage" type="text" value="30 kg">
+						</div>
+					</div>
+					<div class="mb-3">
+						<label class="form-label">Online Check-In</label>
+						<div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-check text-success"></i>
+        </span>
+							<select class="form-control" name="checkIn">
+								<option selected value="Yes">Choose</option>
+								<option value="Yes">Yes</option>
+								<option value="No">No</option>
+							</select>
+						</div>
+					</div>
+					<div class="mb-3">
+						<label class="form-label">Cabin Baggage</label>
+						<div class="input-group">
+                          <span class="input-group-text">
+                         <i class="fas fa-passport text-warning"></i>
+                             </span>
+							<input class="form-control" name="cabIn" placeholder="1 Baggage" type="text">
+						</div>
+					</div>
+					<div class="mb-3">
+						<label class="form-label" for="price">Price</label>
+						<input class="form-control" id="price" name="Price" type="text">
+					</div>
+				</div>
+
+				<button class=" d-flex justify-content-center btn-lg btn btn-primary" type="submit">Submit</button>
+			</form>
+		</div>
+	</div>
+	<div aria-labelledby="contact-tab0" class="tab-pane fade" id="contact0" role="tabpanel">
+
+	</div>
+	<div aria-labelledby="Bookings-tab0" class="tab-pane fade" id="booking0" role="tabpanel">
+		<div class="container mt-5">
+			<h2>Passenger Information</h2>
+			<div class="table-responsive mt-3">
+				<table class="table table-bordered">
+					<thead class="table-dark">
+					<tr>
+						<th> Name</th>
+						<th> Email</th>
+						<th> Mobile</th>
+						<th>Adults</th>
+						<th>Children</th>
+						<th>Pincode</th>
+						<th>State</th>
+						<th>Billing Address</th>
+						<th>Flight From</th>
+						<th>Flight To</th>
+						<!-- Add more table headers for other attributes if needed -->
+					</tr>
+					</thead>
+					<tbody>
+					<tr th:each="passenger : ${passengers}">
+						<td th:text="${passenger.personalName}"></td>
+						<td th:text="${passenger.personalEmail}"></td>
+						<td th:text="${passenger.personalMobile}"></td>
+						<td th:text="${passenger.adults}"></td>
+						<td th:text="${passenger.children}"></td>
+						<td th:text="${passenger.pincode}"></td>
+						<td th:text="${passenger.state}"></td>
+						<td th:text="${passenger.billingAddress}"></td>
+						<td th:text="${passenger.flight.airport_from}"></td>
+						<td th:text="${passenger.flight.airport_to}"></td>
+						<!-- Add more table cells for other attributes if needed -->
+					</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+
+	</div>
+	</div>
+<!-- MDB -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
+<script crossorigin="anonymous" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
